# fifa-world-cup-2026

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml  init.sql  manage.sh  package-lock.json  package.json  tailwind.config.js  vite.config.js
public/: .gitkeep
public/assets/: .gitkeep  main.css  main.js
src/: main.css  main.js  main.rs
src/models/: mod.rs  tournament.rs
src/routes/: home.rs  mod.rs  tournament.rs
src/templates/: mod.rs
templates/: base.html  home.html  tournament.html  worldcup-2026-info.html
