[package]
name = "worldcup_site"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
askama = { version = "0.12", features = ["with-actix-web"] }
askama_actix = "0.14"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"

[[bin]]
name = "worldcup_site"
path = "src/main.rs"